@@ -465,9 +465,11 @@ class SGL_Item
      * 
      * @access  public
      * @param   int   	$typeID			Item Type ID
+     * @param   int     $type           data type to return, can be SGL_RET_STRING
+     *                                  or SGL_RET_ARRAY
      * @return  mixed   $fieldsString	HTML Form
      */
-    function getDynamicFields($typeID)
+    function getDynamicFields($typeID, $type = SGL_RET_STRING)
     {
         SGL::logMessage(null, PEAR_LOG_DEBUG);
 
@@ -487,18 +489,34 @@ class SGL_Item
                     ";
         $result = $dbh->query($query);
 
-        //  display dynamic form fields (changed default object output to standard array)
-        $fieldsString = '';
-        while (list($itemMappingID, $fieldName, $fieldType) 
-            = $result->fetchRow(DB_FETCHMODE_ORDERED)) {
-            $fieldsString .= "<tr>\n";
-            $fieldsString .= '<th>' . ucfirst($fieldName) . "</th>\n";
-            $fieldsString .= '<td>' . $this->generateFormFields(
-                                      $itemMappingID, $fieldName, null, $fieldType) 
-                                    . "</td>\n";
-            $fieldsString .= "</tr>\n";
+        switch ($type) {
+            
+        case SGL_RET_ARRAY:
+            $aFields = array();
+            while (list($itemMappingID, $fieldName, $fieldType)
+                = $result->fetchRow(DB_FETCHMODE_ORDERED)) {
+                    $aFields[ucfirst($fieldName)] =
+                        $this->generateFormFields(
+                        $itemMappingID, $fieldName, null, $fieldType);
+            }
+            $res = $aFields;
+            break;
+
+        case SGL_RET_STRING:
+            //  display dynamic form fields (changed default object output to standard array)
+            $fieldsString = '';
+            while (list($itemMappingID, $fieldName, $fieldType) 
+                = $result->fetchRow(DB_FETCHMODE_ORDERED)) {
+                $fieldsString .= "<tr>\n";
+                $fieldsString .= '<th>' . ucfirst($fieldName) . "</th>\n";
+                $fieldsString .= '<td>' . $this->generateFormFields(
+                                          $itemMappingID, $fieldName, null, $fieldType) 
+                                        . "</td>\n";
+                $fieldsString .= "</tr>\n";
+            }
+            $res = $fieldsString;
         }
-        return $fieldsString;
+        return $res;
     }
 
     /**
