@@ -13,6 +13,8 @@ IMPROVEMENTS
 | VERSION: 0.4.5        |
 +-----------------------+
 BUGFIXES
+01-08-05    SGL_Item::getDynamicFields now returns a string of html representing
+            the fields, or alternatively an array of just the data.
 01-08-05    Removed obselete stylesheets
 26-07-05    Fixed notices related to PHP 4.4.0
 24-07-05    Missing form name added, without which it was impossible to create new articles
